[package]
name = "ta"
version = "0.5.0"
authors = ["Austin Starks <austin@starks-technology.com>"]
edition = "2021"
description = "Technical analysis library. Implements number of indicators: EMA, SMA, RSI, MACD, Stochastic, etc."
keywords = ["technical-analysis", "financial", "ema", "indicators", "trading"]
license = "MIT"
repository = "https://github.com/austin-starks/ta-rs-improved"
homepage = "https://github.com/austin-starks/ta-rs-improved"
documentation = "https://docs.rs/ta"
readme = "README.md"
categories = ["science", "algorithms"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[badges]
travis-ci = { repository = "greyblake/ta-rs", branch = "master" }

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_approx_eq = "1.0.0"
csv = "1.1.0"
bencher = "0.1.5"
rand = "0.6.5"
bincode = "1.3.1"

[profile.release]
lto = true

[[bench]]
name = "indicators"
path = "benches/indicators.rs"
harness = false

